create a route and middleware add

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,3 +73,12 @@ body {
     @apply bg-background text-foreground;
   }
 }
+@layer utilities {
+  .web-page-content p {
+    @apply py-2;
+  }
+  .highlight-link a,
+  a.highlight-link {
+    @apply text-sky-700  hover:text-orange-700 hover:underline;
+  }
+}
